unpackaged/main/default/objects/Campaign/fields/Asset_URL__c.field-meta.xml
<CustomField>
    <fullName>Asset_URL__c</fullName>
    <label>Asset URL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>