unpackaged/main/default/objects/Campaign/fields/Campaign_Asset_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Asset_Full_Name__c</fullName>
    <label>Campaign Asset Full Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>