unpackaged/main/default/objects/Campaign/fields/Campaign_Division__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Division__c</fullName>
    <label>Campaign Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>APACJ</fullName>
                <isActive>false</isActive>
                <label>APACJ</label>
            </value>
            <value>
                <fullName>Japan &amp; Korea</fullName>
                <isActive>false</isActive>
                <label>Japan &amp; Korea</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>