unpackaged/main/default/objects/Campaign/fields/Campaign_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Event_Date__c</fullName>
    <label>Campaign Event Date</label>
    <type>Date</type>
</CustomField>