unpackaged/main/default/objects/Campaign/fields/Campaign_Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Offer_Type__c</fullName>
    <label>Campaign Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABM</fullName>
                <isActive>false</isActive>
                <label>ABM</label>
            </value>
            <value>
                <fullName>Analyst Report</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Communication Opt-In</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
                <isActive>false</isActive>
                <label>Content</label>
            </value>
            <value>
                <fullName>Content Bundle</fullName>
            </value>
            <value>
                <fullName>Data Sheet</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
                <isActive>false</isActive>
                <label>Direct Mail</label>
            </value>
            <value>
                <fullName>Direct Response (Conversation)</fullName>
            </value>
            <value>
                <fullName>eBook</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Event Inquiry</fullName>
            </value>
            <value>
                <fullName>Event - Webcast</fullName>
                <isActive>false</isActive>
                <label>Event - Webcast</label>
            </value>
            <value>
                <fullName>Follow / Like / Friend</fullName>
                <isActive>false</isActive>
                <label>Follow / Like / Friend</label>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Infographic</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Online Office Hours</fullName>
                <isActive>false</isActive>
                <label>Online Office Hours</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>PLAY TV</fullName>
            </value>
            <value>
                <fullName>Product Beta Application</fullName>
            </value>
            <value>
                <fullName>Product Trial</fullName>
                <isActive>false</isActive>
                <label>Product Trial</label>
            </value>
            <value>
                <fullName>Promotional Offer</fullName>
                <isActive>false</isActive>
                <label>Promotional Offer</label>
            </value>
            <value>
                <fullName>Purchase Promotion</fullName>
                <isActive>false</isActive>
                <label>Purchase Promotion</label>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Sales Follow-up (Other)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>