unpackaged/main/default/objects/Campaign/fields/Campaign_Region_Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Region_Sub_Division__c</fullName>
    <label>Campaign Region (Sub-Division)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>RoA</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
                <isActive>false</isActive>
                <label>Latin America</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>