unpackaged/main/default/objects/Campaign/fields/X18_digit_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_digit_Campaign_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(18-digit) Campaign ID</label>
    <type>Text</type>
</CustomField>