unpackaged/main/default/objects/Campaign/recordTypes/Child_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Child_Campaign</fullName>
    <active>true</active>
    <description>Child Campaigns are used to track the specific offer or tactic (ex: whitepaper, event, webinar, etc.)</description>
    <label>Child Campaign</label>
</RecordType>