unpackaged/main/default/objects/Campaign/recordTypes/List_of_Names.recordType-meta.xml
<RecordType>
    <fullName>List_of_Names</fullName>
    <active>true</active>
    <description>Purchased lists of names, lists of targets for various programs</description>
    <label>List of Names</label>
</RecordType>